--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
